--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .hero{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: url("./images/front-page/hero-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -19,19 +19,22 @@ color: white !important;
 
 .nav-link{
     font-size: 1.1rem;
+    text-align: center;
     font-weight: 600;
     color: white !important;
 }
 .hero-text{
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 40px;
 }
 .hero-main{
     text-align: center;
     color: white;
     font-family: poppins;
+   
 }
 .hero-title{
     margin: 0 0 29px;
@@ -41,7 +44,7 @@ color: white !important;
     font-family: poppins;
 }
 .hero-title h1, .yellow-dot{
-    font-size: 5rem !important;
+    font-size: 5vw !important;
     font-weight: 700 !important;
 }
 .hero-p{
@@ -64,7 +67,7 @@ color: white !important;
     height: 63px;
     line-height: 57px;
     background: rgba(255,255,255,.2);
-    margin: 0 15px;
+    margin: 0 15px 20px 15px;
     padding: 0 70px;
     display: inline-block;
     border: 3px solid #fff;
@@ -81,11 +84,10 @@ color: white !important;
 }
 
 .button2{
-    width: auto;
     height: 63px;
     line-height: 57px;
     background: #f1d204;
-    margin: 0 15px;
+    margin: 0 15px 20px 15px;
     padding: 0 70px;
     display: inline-block;
     border: 3px solid #f1d204;
@@ -100,4 +102,219 @@ color: white !important;
 .button2:hover{
     background-color: rgba( 0, 0, 0, .1 );
     border: 3px solid #f1d204;
+}
+/* section */
+section{
+    min-height: 50vh;
+   padding-top: 50px;
+    padding-bottom: 50px;
+}
+/* about */
+.section-title{
+    color: #000000;
+    font-family: poppins;
+    font-size: 35px;
+    line-height: 38px;
+    font-weight: 700;
+    text-align: center;
+    margin: 40px 0 30px 0;
+}
+.section-text, .progress-text, .service-section p{
+    margin-bottom: 40px;
+    line-height: 26px;
+    font-size: 16px;
+    color: #6c6d6d;
+    font-family: lato;
+    font-weight: 400;
+    text-align: center;
+}
+
+.progress-section-typo, .progress-section-design, .progress-section-dev{
+  padding: 20px;
+  margin: 10px 0;
+  border: 5px solid transparent;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.progress-section-typo:hover {
+    border: 5px solid rgb(25,135,84);
+    color: rgb(25,135,84);
+}
+.progress-section-design:hover{
+    border: 5px solid rgb(255,193,7);
+}
+.progress-section-dev:hover{
+    border: 5px solid rgb(13,110,253);
+}
+.progress-title{
+    font-size: 25px;
+    line-height: 18px;
+    font-weight: 700;
+    text-align: center;
+    margin: 5px 0 20px 0;
+}
+
+/* projects */
+.project{
+    padding: 50px 0 0 0;
+    background: url("./images/front-page/pattern.png");
+    background-repeat: repeat;
+
+}
+.project-img{
+    background-color: #fff !important;
+}
+.project-img img{
+  object-fit: cover;
+    height: 337.25px;
+    width: 100%;
+    margin:0;
+    background-color: #fff;
+}
+
+.project-img:hover{
+    opacity: 0.4;
+}
+
+/* testimonial */
+.testimonial{
+    background: url("./images/testiomnials-background.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+ 
+    
+}
+.testimonial-title, .news-title{
+    color: #ffffff;
+    font-size: 3.2vw;
+    line-height: 45px;
+    font-weight: 700;
+    text-align: center;
+    margin: 40px 0 50px 0;
+}
+.testimonial-text{
+    text-align: center;
+    background-color: #6a4d8a;
+    padding: 50px 35px 50px;
+    margin: 20px;
+}
+
+.testimonial-text img{
+    border-radius: 100%;
+    margin-bottom:  30px;
+}
+.testimonial-text h3{
+    color: #ffffff;
+    font-size: 20px;
+    line-height: 15px;
+    font-weight: 700;
+    text-align: center;
+    margin: 20px 0;
+}
+.testimonial-text p{
+    line-height: 26px;
+    font-size: 16px;
+    color: #fff;
+    font-family: lato;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 35px;
+    padding: 20px 35px 20px;
+    position: relative;
+}
+
+/* service */
+.service-section{
+    text-align: center;
+    transition: 2s ease-in;
+    margin: 10px;
+}
+
+.service-section svg{
+    margin: 20px 0;
+}
+
+.service-section h5{
+    font-size: 25px;
+    line-height: 18px;
+    font-weight: 700;
+    text-align: center;
+    margin: 5px 0 20px 0;
+   
+}
+
+/* news */
+.news{
+    background-color:  #222f36;
+}
+
+.news-button{
+    height: 50px;
+    line-height: 27px;
+    background: #f1d204;
+    margin: 0 15px 40px 15px;
+    padding: 0 20px;
+    display: inline-block;
+    border: 3px solid #f1d204;
+    border-radius: 3px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+    transition: all .3s;
+    font-family: lato;
+    min-width: 100px;
+}
+
+.news-button:hover{
+    background: #6a4d8a;
+    border: 3px solid #6a4d8a;
+}
+
+.news-section{
+    background-color: #fff;
+    min-height: 600px;
+
+}
+.more-height{
+    min-height: 650px;
+}
+.news-section-text{
+    padding: 30px 20px;
+    margin: 20px;
+}
+
+.news-section-text h3{
+    width: 100%;
+    color: #5e5e5e;
+    transition: all .3s;
+    font-family: poppins;
+    font-size: 30px;
+    font-weight: 700;
+}
+.img-fluid{
+    min-height: 250px;
+}
+.news-section-text h3:hover{
+    color: #f1d204
+}
+
+.news-section-text p{
+    margin: 20px 0;
+    line-height: 26px;
+    color: #8c9597;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.news-section-text p a{
+    color: #6a4d8a !important;
+    text-decoration: none ;
+    font-weight: 600;
+}
+
+.news-section-text p a .yellow-link:hover{
+    color: #f1d204 !important;
 }
